@@ -1,0 +1,3 @@
+[submodule "aqo/libaqo"]
+	path = aqo/libaqo
+	url = git@github.com:aquietone/libaqo.git
