@@ -1,6 +1,7 @@
 # 2024/01/20
 - Berserker updates
 - Monk updates
+- Add libaqo submodule to start making some common stuff
 
 # 2024/01/17
 - Updates to memming spells
